☕️ Java 15 Code tests